[package]
name = "inquest"
version = "0.2.0"
edition = "2021"
description = "An SEO Utility CLI tool"

[dependencies]
async-trait = "0.1.53"
atoi = "1.0.0"
chrono = "0.4"
csv = "1.1"
bytes = { version = "1", features = ["serde"] }
linked-hash-map = "0.5.4"
reqwest = { version = "0.11.9", features = ["json"]}
scraper = "0.12.0"
select = "0.5.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1"
structopt = "0.3.26"
tokio = { version = "1.17.0", features = ["full"] }
