[package]
name = "inquest"
version = "0.2.0"
edition = "2021"
description = "An SEO Utility CLI tool"

[dependencies]
# Async
async-trait = "0.1"
futures = "0.3"
pin-project = "1"

# Core
structopt = "0.3"
tokio = { version = "1.17", features = ["full"] }
tower = { version = "0.4", features = ["full"] }

# Data
atoi = "1"
bytes = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
anyhow = "1"
thiserror = "1"

# Html
scraper = "0.12"
select = "0.5"

# Http
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json"]}

# Utils
chrono = "0.4"
linked-hash-map = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
